--- a/main.html
+++ b/main.html
@@ -7,6 +7,25 @@
 </head>
 
 <body>
+	<table border=1px>
+		<thead>
+			<tr>
+				<th>Roll number</th>
+				<th>Name</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>vani</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>arvvi</td>
+			</tr>
+		
+		</tbody>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
